[tool.poetry]
name = "booker"
version = "0.1.0"
description = "Telegram Bot"
authors = ["tebriz91 <tebriz.tagiyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "==0.21.1"
python-telegram-bot = "==20.7"
aiosqlite = "==0.19.0"
schulze = "==0.1"
jinja2 = "==3.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "==0.0.240"
pyright = "==1.1.291"
black = "==23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

ignore = ["A003"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"